fixed snippet name

--- a/modules/overview/pages/security-best-practices.adoc
+++ b/modules/overview/pages/security-best-practices.adoc
@@ -24,7 +24,7 @@ devEnvironments:
   defaultNamespace:
     autoProvision: false
 ----
-include::example$snip_curated-access-to-che.adoc[]
+include::example$snip_che-curated-access.adoc[]
 
 .Role-based access control (RBAC)
 
