Update CheCluster patch when deploying Che with Keycloak as OIDC provider
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -628,7 +628,13 @@ spec:
       gateway:
         oAuthProxy:
           cookieExpireSeconds: 300
-  components:
+        deployment:
+            containers:
+            - env:
+                - name: OAUTH2_PROXY_BACKEND_LOGOUT_URL
+                  value: "http://$KEYCLOAK_HOST/realms/che/protocol/openid-connect/logout?id_token_hint=\{id_token}"
+            name: oauth-proxy
+components:
     cheServer:
       extraProperties:
         CHE_OIDC_USERNAME__CLAIM: email
