--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -84,9 +84,7 @@ metadata:
   name: allow-from-workspaces-namespaces
   namespace: {prod-namespace}   <1>
 spec:
-  podSelector:
-    matchLabels:
-      app.kubernetes.io/component: che-gateway   <2>
+  podSelector: {}   <2>
   ingress:
     - from:
         - podSelector: {}
@@ -98,7 +96,7 @@ spec:
 ----
 <1> The {prod-short} namespace.
 The default is `{prod-namespace}`.
-<2> The `podSelector` only selects che-gateway pods
+<2> The empty `podSelector` selects all pods in the {prod-short} namespace.
 ====
 +
 
