--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -10,7 +10,7 @@
 Default extensions, like recommended extensions, allow you to work with a pre-installed set of extensions.
 
 Recommended extension is specified by adding the extension identifier to the workspace file or to the *.vscode/extensions.json* file of your project.
-When the editor is started up, the recommended extension will be fetched from the extension marketplace and installed.
+When the editor starts, the recommended extension will be fetched from the extension marketplace and installed.
 
 Default extension is specified by putting the extension binary *.vsix* file path to the __DEFAULT_EXTENSIONS__ environment variable.
 After the startup, the editor checks for the environment variable, and if it is specified, takes the path to the extension and installs it in the background without disturbing the user.
