--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -13,7 +13,9 @@ Recommended extension is specified by adding the extension identifier to the wor
 When the editor starts, the recommended extension will be fetched from the extension marketplace and installed.
 
 Default extensions are specified by putting the extension binary *.vsix* file path to the __DEFAULT_EXTENSIONS__ environment variable.
-After the startup, the editor checks for the environment variable, and if it is specified, takes the path to the extension and installs it in the background without disturbing the user.
+After startup, the editor checks for the environment variable, and if it is specified, takes the path to the extensions and installs it in the background without disturbing the user.
+
+Recommended extensions from *.vscode/extensions.json* and default extensions from the __DEFAULT_EXTENSIONS__ environment variable both installs extensions on editor startup. Recommended extensions are useful when extensions are different per workspace and when the desired extensions are available in the plugin registry configured in {prod-short}. Default extensions described in this documentation are useful for installing .vsix extensions by default from the editor level.
 
 [NOTE]
 ====
