--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -27,7 +27,7 @@ It is possible to specify several extensions separated by semicolon.
 ----
 ====
 
-Below you can find several examples how to add a *.vsix* files to your workspace and how to define DEFAULT_EXTENSIONS environment variable.
+Below you can find several examples how to add *.vsix* files to your workspace and how to define the DEFAULT_EXTENSIONS environment variable.
 
 .Procedure
 
