--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -31,6 +31,8 @@ Below you can find several examples how to add *.vsix* files to your workspace a
 
 .Procedure
 
+This documentation describes three different ways to embed default .vsix extensions for your workspace.
+
 * Put the extension binary to the source repository.
 +
 The easiest way is to put the extension binary to the Git repository and define the environment variable in the devfile.
