--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -41,13 +41,16 @@ Just specify it in your *.devfile.yaml* like below.
 +
 [source,yaml]
 ----
+schemaVersion: 2.3.0
+metadata:
+  generateName: example-project
 components:
   - name: tools
     container:
       image: quay.io/devfile/universal-developer-image:ubi8-latest
       env:
         - name: 'DEFAULT_EXTENSIONS'
-          value: '/projects/sample/extension.vsix'
+          value: '/projects/example-project/extension.vsix'
 ----
 
 * Use Devfile *postStart* event to fetch the extension binary from the network.
