--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -66,6 +66,9 @@ Following sample demonstrate what should be added to the devfile to add two exte
 +
 [source,yaml]
 ----
+schemaVersion: 2.3.0
+metadata:
+  generateName: example-project
 components:
   - name: tools
     container:
