--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -100,8 +100,8 @@ events:
 +
 [WARNING]
 ====
-It some cases *curl* may download *gzip* compressed file. This may make it impossible to install the extension.
-To fix that try to save the file to *.vsix.gz* and then decompress it with *gunzip*. It will replace *.vsix.gz* with unpacked *.vsix* file.
+In some cases *curl* may download a *gzip* compressed file. This may make it impossible to install the extension.
+To fix that try to save the file as a *.vsix.gz* file and then decompress it with *gunzip*. This will replace the *.vsix.gz* file with an unpacked *.vsix* file.
 
 [source,yaml]
 ----
