--- a/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/default-extensions-for-microsoft-visual-studio-code.adoc
@@ -5,17 +5,17 @@
 // :page-aliases:
 
 [id="visual-studio-code-default-extensions"]
-= Configure default extensions
+= Configuring default extensions
 
 Default extensions are a pre-installed set of extensions, specified by putting the extension binary `.vsix` file path to the __DEFAULT_EXTENSIONS__ environment variable.
 
 After startup, the editor checks for this environment variable, and if it is specified, takes the path to the extensions and installs it in the background without disturbing the user.
 
-Default extensions described in this documentation are useful for installing .vsix extensions by default from the editor level.
+Configuring default extensions is useful for installing .vsix extensions from the editor level.
 
 [NOTE]
 ====
-You can specify several extensions separated by semicolon.
+If you want to specify multiple extensions, separate them by semicolon.
 
 [source,yaml]
 ----
@@ -23,7 +23,7 @@ You can specify several extensions separated by semicolon.
 ----
 ====
 
-Read on to learn how to define the DEFAULT_EXTENSIONS environment variable with multiple examples of adding `.vsix` files to your workspace.
+Read on to learn how to define the DEFAULT_EXTENSIONS environment variable, including multiple examples of adding `.vsix` files to your workspace.
 
 There are three different ways to embed default `.vsix` extensions into your workspace:
 
@@ -61,9 +61,9 @@ You can use cURL or GNU Wget to download extensions to your workspace.
 For that you need to:
 
 --
-** specify a devfile command to download one or several extensions to your workpace
-** add a *postStart* event to run the command on workspace startup
-** define the __DEFAULT_EXTENSIONS__ environment variable in the Devfile
+* specify a devfile command to download extensions to your workpace
+* add a `postStart` event to run the command on workspace startup
+* define the __DEFAULT_EXTENSIONS__ environment variable in the devfile
 --
 
 .Procedure
@@ -101,7 +101,7 @@ events:
 +
 [WARNING]
 ====
-In some cases *curl* may download a *gzip* compressed file. This may make it impossible to install the extension.
+In some cases curl may download a `.gzip` compressed file. This might make installing the extension impossible.
 To fix that try to save the file as a *.vsix.gz* file and then decompress it with *gunzip*. This will replace the *.vsix.gz* file with an unpacked *.vsix* file.
 
 [source,yaml]
@@ -113,14 +113,14 @@ gunzip /tmp/extension.vsix.gz
 
 .Including the extensions `.vsix` binaries in the `che-code` image.
 
-With default extensions bundled in the editor image along with the __DEFAULT_EXTENSIONS__ environment variable defined in a ConfigMap, you can apply the default extensions without changing the devfile.
+With default extensions bundled in the editor image, and the __DEFAULT_EXTENSIONS__ environment variable defined in the ConfigMap, you can apply the default extensions without changing the devfile.
 
-Following steps will help you to add the extensions you need to the editor image.
+Following the steps below to add the extensions you need to the editor image.
 
 .Procedure
-* Create a directory and place one or several *.vsix* extensions in this directory.
+* Create a directory and place your selected `.vsix` extensions in this directory.
 
-* Create a Dockerfile with following content.
+* Create a Dockerfile with the following content:
 +
 ====
 [source,]
@@ -138,7 +138,7 @@ RUN echo "cp -r /default-extensions /checode/" >> /entrypoint-init-container.sh
 ----
 ====
 
-* Build the image and then push it to a registry.
+* Build the image and then push it to a registry:
 +
 ====
 [,console]
@@ -148,7 +148,7 @@ $ docker push yourname/che-code:next
 ----
 ====
 
-* Add the new ConfigMap in the user's {orch-namespace}, define the __DEFAULT_EXTENSIONS__ environment variable and specify the absolute paths to the extensions. This ConfigMap sets the environment variable to all workspaces in the user's {orch-namespace}.
+* Add the new ConfigMap to the user's {orch-namespace}, define the __DEFAULT_EXTENSIONS__ environment variable, and specify the absolute paths to the extensions. This ConfigMap sets the environment variable to all workspaces in the user's {orch-namespace}.
 +
 ====
 [source,yaml]
@@ -167,7 +167,7 @@ data:
 ----
 ====
 
-* Create a workspace using *yourname/che-code:next* image.
+* Create a workspace using `yourname/che-code:next` image.
 First, open the dashboard and navigate to the *Create Workspace* tab on the left side.
 +
 --
