feat: persistent user home documentation
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -15,3 +15,4 @@
 * xref:configuring-storage-classes.adoc[]
 * xref:configuring-the-storage-strategy.adoc[]
 * xref:configuring-storage-sizes.adoc[]
+* xref:about-persistent-user-home.adoc[]
