--- a/modules/administration-guide/pages/about-persistent-user-home.adoc
+++ b/modules/administration-guide/pages/about-persistent-user-home.adoc
@@ -9,7 +9,7 @@
 
 
 {prod} provides a persistent home directory feature that allows each non-ephemeral workspace to have their `/home/user` directory be persisted across workspace restarts.
-This feature can be enabled in the CheCluster by setting `spec.devEnvironments.persistUserHome.enabled` to `true`.
+You can enable this feature in the CheCluster by setting `spec.devEnvironments.persistUserHome.enabled` to `true`.
 
 For newly started workspaces, this feature creates a PVC mounted to the `/home/user` path of the tools container.
 In this documentation, a "tools container" will be used to refer to the first container in the devfile.
