--- a/modules/administration-guide/pages/about-persistent-user-home.adoc
+++ b/modules/administration-guide/pages/about-persistent-user-home.adoc
@@ -47,9 +47,9 @@ The `persistUserHome` depends on the tools image used for the workspace. By defa
 
 If you are using a custom image, there are three requirements that should be met to support the `persistUserHome` feature.
 
-1. The tools image should contain `stow` version 2.4.0.
-2. The home directory should be `/home/user`.
-3. In the tools image, the directory that contains the `/home/user` content is `/home/tooling`.
+. The tools image should contain `stow` version 2.4.0.
+. The home directory should be `/home/user`.
+. In the tools image, the directory that contains the `/home/user` content is `/home/tooling`.
 
 Due to requirement three, the default UDI image for example adds the `/home/user` content to `/home/tooling` instead, and runs:
 
