--- a/modules/administration-guide/pages/about-persistent-user-home.adoc
+++ b/modules/administration-guide/pages/about-persistent-user-home.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
 :description: About persistent user home
 :keywords: administration guide, about, {prod-id-short}, persistent, user, home
-:navtitle: About persistent user home
+:navtitle: Persistent user home
 :page-aliases:
 
 [id="about-persistent-user-home"]
