--- a/modules/administration-guide/pages/about-persistent-user-home.adoc
+++ b/modules/administration-guide/pages/about-persistent-user-home.adoc
@@ -5,7 +5,7 @@
 :page-aliases:
 
 [id="about-persistent-user-home"]
-= About persistent user home
+= Persistent user home
 
 
 {prod} provides a persistent home directory feature that allows each non-ephemeral workspace to have their `/home/user` directory be persisted across workspace restarts.
